--- a/.verb.md
+++ b/.verb.md
@@ -1,6 +1,8 @@
-# {%= name %} {%= badge("fury") %}
+# {%= name %} {%= badge("fury") %} {%= badge("travis") %}
 
 > {%= description %}
+
+## Install
 
 {%= include("install-npm", {save: true}) %}
 
@@ -47,17 +49,14 @@ stringify(authors, {filter: '{name,url}', sep: '\n'});
 // Brian Woodward (https://github.com/doowb)
 ```
 
+## Related 
+{%= related(verb.related.list) %}
 
-## Run tests
-
-Install dev dependencies:
-
-```bash
-node i -d && mocha
-```
+## Running tests
+{%= include("tests") %}
 
 ## Contributing
-Pull requests and stars are always welcome. For bugs and feature requests, [please create an issue]({%= bugs.url %})
+{%= include("contributing") %}
 
 ## Author
 {%= include("author") %}
